--- a/app/src/main/res/layout/group_task_item.xml
+++ b/app/src/main/res/layout/group_task_item.xml
@@ -1,29 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <TextView
-        android:id="@+id/group_task_item"
-        android:layout_width="190dp"
+        android:id="@+id/group_task_item_name"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="5dp"
+        android:padding="12dp"
         android:background="@drawable/radius_background"
         android:gravity="center"
         android:text="product"
         android:textColor="@color/white"
-        android:textSize="20sp" />
-<!--         <Button-->
-<!--             android:id="@+id/add_new_group_task_item"-->
-<!--             android:layout_width="205dp"-->
-<!--             android:layout_height="100dp"-->
-<!--             android:layout_marginTop="6dp"-->
-<!--             android:layout_toRightOf="@+id/group_task_item"-->
-<!--             android:background="@drawable/radius_background"-->
-<!--             android:gravity="center"-->
-<!--             android:text="+"-->
-<!--             android:textColor="@color/white"-->
-<!--             android:textSize="20sp" />-->
+        android:textSize="20sp"
+        android:ellipsize="end"/>
 </LinearLayout>
