--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light">#99999999</color>
     <color name="secondary">#cccccccc</color>
+    <color name="light">#99999999</color>
+    <color name="night_light">#9A9A9A</color>
     <color name="navigationBarColor">#FFF</color>
-    <color name="info">#0068ff</color>
+    <color name="info">#0664ED</color>
+    <color name="primary">#0D69ED</color>
+    <color name="overlay">#B3000000</color>
 </resources>
